--- a/P04/html/info/C.html
+++ b/P04/html/info/C.html
@@ -10,5 +10,6 @@
         <p>Letter: C</p>
         <p>Chemical formula: C4H5N3O</p>
         <a href="https://en.wikipedia.org/">More info</a>
+        <a href="/">Main page</a>
       </body>
     </html>
