--- a/P04/html/info/A.html
+++ b/P04/html/info/A.html
@@ -10,5 +10,6 @@
         <p>Letter: A</p>
         <p>Chemical formula: C5H5N5</p>
         <a href="https://en.wikipedia.org/">More info</a>
+        <a href="/">Main page</a>
       </body>
     </html>
