--- a/P04/html/info/T.html
+++ b/P04/html/info/T.html
@@ -9,5 +9,6 @@
         <p>Letter: T</p>
         <p>Chemical formula: C5H6N2O2</p>
         <a href="https://en.wikipedia.org/">More info</a>
+        <a href="/">Main page</a>
       </body>
     </html>
