--- a/P05/html/index.html
+++ b/P05/html/index.html
@@ -8,10 +8,10 @@
         <h1>Bases  information</h1>
         <p>Click on the following links to have more information</p>
         <p>
-            <a href="http://127.0.0.1:8080/info/A">[A]</a>
-            <a href="http://127.0.0.1:8080/info/C">[C]</a>
-            <a href="http://127.0.0.1:8080/info/G">[G]</a>
-            <a href="http://127.0.0.1:8080/info/T">[T]</a>
+            <a href="http://127.0.0.1:8080/info/A.html">[A]</a>
+            <a href="http://127.0.0.1:8080/info/C.html">[C]</a>
+            <a href="http://127.0.0.1:8080/info/G.html">[G]</a>
+            <a href="http://127.0.0.1:8080/info/T.html">[T]</a>
         </p>
       </body>
     </html>
