--- a/S16/html/form-e1.html
+++ b/S16/html/form-e1.html
@@ -5,10 +5,7 @@
     <title>FORM 1</title>
   </head>
   <body>
-    <form action="echo" method="get">
-      Message to send to the server: <br>
-      <input type="text" name="msg">
-      <input type="submit" value="SEND">
-    </form>
+    <h1>Received message</h1>
+    <p>{message}</p>
   </body>
 </html>
