--- a/P06/html/index.html
+++ b/P06/html/index.html
@@ -8,9 +8,11 @@
         <h1>SEQ2 server</h1>
         <p>Access to the server</p>
         <hr>
-        <p>Is the server alive</p>
+         <form action="ping" method="get">
+          Is the server alive?
+          <input type="submit" value="SEND">
+        </form>
         <hr>
 
       </body>
     </html>
-
