--- a/P06/html/index.html
+++ b/P06/html/index.html
@@ -8,11 +8,44 @@
         <h1>SEQ2 server</h1>
         <p>Access to the server</p>
         <hr>
-         <form action="ping" method="get">
-          Is the server alive?
-          <input type="submit" value="SEND">
+        <form action="ping" method="get">
+            Is the server alive?
+            <input type="submit" value="SEND">
         </form>
         <hr>
-
+        <form action="get" method="get">
+            Get a Sequence. Select sequence number
+            <select name="n">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+            </select>
+            <input type="submit" value="GET">
+        </form>
+        <hr>
+        <form action="gene" method="get">
+            Get a Gene. Select sequence name
+            <select name="name">
+                <option value="U5">U5</option>
+                <option value="ADA">ADA</option>
+                <option value="FRAT1">FRAT1</option>
+                <option value="RNU6_269P">RNU6_269P</option>
+                <option value="FXN">FXN</option>
+            </select>
+            <input type="submit" value="GENE">
+        </form>
+        <hr>
+        <form action="operation" method="get">
+            Write a sequence:
+            <input type="text" name="seq"><br>
+            Select operation
+            <input type="radio" name="operation" value="Info" checked> Info
+            <input type="radio" name="operation" value="Comp"> Comp
+            <input type="radio" name="operation" value="Rev"> Rev <br>
+            Perform operation:
+            <input type="submit" value="OPERATE!">
+        </form>
       </body>
     </html>
