--- a/Final-Project/main page.html
+++ b/Final-Project/main page.html
@@ -27,7 +27,7 @@
             Select the species:
             <input type="text" name="species"><br><br>
             Select a chromosome:
-            <input type="text" name="chromosome"><br><br>
+            <input type="text" name="chromo"><br><br>
             <input type="submit" value="Send">
         </from>
     </body>
