--- a/Final-Project/main_page.html
+++ b/Final-Project/main_page.html
@@ -9,26 +9,26 @@
         <h2>BASIC Level Services</h2>
 
         <p>1) List of species in the genome database</p>
-        <from action="listSpecies" method="get">
+        <form action="listSpecies" method="get">
             Limit:
             <input type="text" name="limit"><br><br>
             <input type="submit" value="Send">
-        </from>
+        </form>
 
         <p>2) Send information about the karyotype</p>
-        <from action="karyotype" method="get">
+        <form action="karyotype" method="get">
             Select the species:
             <input type="text" name="species"><br><br>
             <input type="submit" value="Send">
-        </from>
+        </form>
 
         <p>3) Chromosome length</p>
-        <from action="chromosomeLength" method="get">
+        <form action="chromosomeLength" method="get">
             Select the species:
             <input type="text" name="species"><br><br>
             Select a chromosome:
             <input type="text" name="chromo"><br><br>
             <input type="submit" value="Send">
-        </from>
+        </form>
     </body>
     </html>
