--- a/Final-Project/chromosome.html
+++ b/Final-Project/chromosome.html
@@ -2,10 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>KARYOTYPE OF SPECIFIC SPECIES</title>
+        <title>LENGTH OF THE SELECTED CHROMOSOME</title>
     </head>
     <body style="background-color: LightBlue;">
-        <p>The names of the chromosomes are: </p>
-        <p>{{context.k_names}}</p>
+        <p>The length of the chromosomes is: {{context.len}}</p>
     </body>
 </html>
