--- a/Final-Project/main_page.html
+++ b/Final-Project/main_page.html
@@ -30,5 +30,19 @@
             <input type="text" name="chromo"><br><br>
             <input type="submit" value="Send">
         </form>
+
+        <p>4) Get the sequence of a human gene </p>
+        <form action="geneSeq" method="get">
+            Select a gene:
+            <input type="text" name="gene"><br><br>
+            <input type="submit" value="Send">
+        </form>
+
+        <p>5) Get the info of a human gene </p>
+        <form action="geneInfo" method="get">
+            Select a gene:
+            <input type="text" name="gene"><br><br>
+            <input type="submit" value="Send">
+        </form>
     </body>
     </html>
