--- a/Final-Project/geneInfo.html
+++ b/Final-Project/geneInfo.html
@@ -8,7 +8,7 @@
         <h1>Gene: {{context.name}}</h1>
         <p>Information about this gene: </p>
         <p>Start: {{context.start}} <br>
-        End: {{context.start}} <br>
+        End: {{context.end}} <br>
         ID: {{context.id}} <br>
         Length: {{context.length}} <br>
         Name of the chromosome: {{context.chromo}}</p>
