--- a/Final-Project/chromosome.html
+++ b/Final-Project/chromosome.html
@@ -5,6 +5,6 @@
         <title>LENGTH OF THE SELECTED CHROMOSOME</title>
     </head>
     <body style="background-color: LightBlue;">
-        <p>The length of the chromosomes is: {{context.len}}</p>
+        <p>The length of the chromosomes {{context.chromo}} of {{context.species}}: {{context.len}}</p>
     </body>
 </html>
