--- a/Final-Project/karyotype.html
+++ b/Final-Project/karyotype.html
@@ -5,7 +5,7 @@
         <title>KARYOTYPE OF SPECIFIC SPECIES</title>
     </head>
     <body style="background-color: LightBlue;">
-        <p>The names of the chromosomes are: </p>
+        <p>The names of the chromosomes of the {{context.species}} are:  </p>
         <p>{{context.k_names}}</p>
     </body>
 </html>
