--- a/Final-Project/html/chromosome.html
+++ b/Final-Project/html/chromosome.html
@@ -6,5 +6,6 @@
     </head>
     <body style="background-color: LightBlue;">
         <p>The length of the chromosomes {{context.chromo}} of {{context.species}}: {{context.len}}</p>
+        <a href="/">Main page</a>
     </body>
 </html>
