--- a/Final-Project/html/geneCalc.html
+++ b/Final-Project/html/geneCalc.html
@@ -10,5 +10,6 @@
         <p>Total Length: {{context.length}} <br>
         Percentage of the bases: <br>
         {{context.percentages}}</p>
+        <a href="/">Main page</a>
     </body>
 </html>
