--- a/Final-Project/html/geneInfo.html
+++ b/Final-Project/html/geneInfo.html
@@ -12,5 +12,6 @@
         ID: {{context.id}} <br>
         Length: {{context.length}} <br>
         Name of the chromosome: {{context.chromo}}</p>
+        <a href="/">Main page</a>
     </body>
 </html>
