--- a/Final-Project/html/geneList.html
+++ b/Final-Project/html/geneList.html
@@ -7,5 +7,6 @@
     <body style="background-color: LightBlue;">
         <p> Genes located in the chromosome {{context.chromo}} from  {{context.start}} to {{context.end}}</p>
         <p>{{context.genes}}</p>
+        <a href="/">Main page</a>
     </body>
 </html>
