--- a/Final-Project/html/geneSeq.html
+++ b/Final-Project/html/geneSeq.html
@@ -7,5 +7,6 @@
     <body style="background-color: LightBlue;">
         <h1>Gene: {{context.name}}</h1>
         <textarea rows="30" cols="100">{{context.gene}}</textarea><br>
+        <a href="/">Main page</a>
     </body>
 </html>
