--- a/Final-Project/html/karyotype.html
+++ b/Final-Project/html/karyotype.html
@@ -7,5 +7,6 @@
     <body style="background-color: LightBlue;">
         <p>The names of the chromosomes of the {{context.species}} are:  </p>
         <p>{{context.k_names}}</p>
+        <a href="/">Main page</a>
     </body>
 </html>
