--- a/Final-Project/html/listSpecies.html
+++ b/Final-Project/html/listSpecies.html
@@ -8,5 +8,6 @@
         <p>The total number of species in ensembl: {{context.allspecies}}</p>
         <p>The limit you have selected is: {{context.limit}}</p>
         <p>{{context.names}}</p>
+        <a href="/">Main page</a>
     </body>
 </html>
